#12,#13: Uses integer id for resources to storing metrics. It should save space on the disk.